@@ -15,7 +15,6 @@
  * specific language governing permissions and limitations
  * under the License.
  */
-
 package org.wso2.carbon.identity.application.authenticator.fido;
 
 import com.yubico.u2f.data.messages.AuthenticateRequestData;
@@ -35,6 +34,8 @@ import org.wso2.carbon.identity.application.authenticator.fido.dto.FIDOUser;
 import org.wso2.carbon.identity.application.authenticator.fido.u2f.U2FService;
 import org.wso2.carbon.identity.application.authenticator.fido.util.FIDOAuthenticatorConstants;
 import org.wso2.carbon.identity.application.authenticator.fido.util.FIDOUtil;
+import org.wso2.carbon.identity.core.util.IdentityCoreConstants;
+import org.wso2.carbon.user.core.UserCoreConstants;
 
 import javax.servlet.http.HttpServletRequest;
 import javax.servlet.http.HttpServletResponse;
@@ -68,7 +69,6 @@ public class FIDOAuthenticator extends AbstractApplicationAuthenticator
             AuthenticatedUser user = getUsername(context);
 
             U2FService u2FService = U2FService.getInstance();
-            //TODO enhancement: tenant domain, user store domain
             FIDOUser fidoUser = new FIDOUser(user.getUserName(), user.getTenantDomain(),
                                              user.getUserStoreDomain(), AuthenticateResponse.fromJson(tokenResponse));
             fidoUser.setAppID(appID);
@@ -116,7 +116,7 @@ public class FIDOAuthenticator extends AbstractApplicationAuthenticator
         try {
             //authentication page's URL.
             String loginPage = ConfigurationFacade.getInstance().getAuthenticationEndpointURL();
-            loginPage.replace("login.do", "authentication.jsp");
+            loginPage = loginPage.replace("login.do", "authentication.jsp");
             //username from basic authenticator.
             AuthenticatedUser user = getUsername(context);
             //origin as appID eg.: http://example.com:8080
@@ -129,14 +129,14 @@ public class FIDOAuthenticator extends AbstractApplicationAuthenticator
 
 
                 response.sendRedirect(response.encodeRedirectURL(loginPage + ("?"))
-                                      + "&authenticators=" + getName() + ":" + "LOCAL" + "&type=fido&sessionDataKey=" +
-                                      request.getParameter("sessionDataKey") +
-                                      "&data=" + data.toJson());
+                        + "&authenticators=" + getName() + ":" + "LOCAL" + "&type=fido&sessionDataKey=" +
+                        request.getParameter("sessionDataKey") +
+                        "&data=" + data.toJson());
             } else {
-                String redirectURL = loginPage.replace("login.do", "retry.do");
-                redirectURL = response.encodeRedirectURL(redirectURL + ("?")) + "&failedUsername=" + URLEncoder.encode(user.getUserName(), "UTF-8") +
-                              "&statusMsg=" + URLEncoder.encode(FIDOAuthenticatorConstants.AUTHENTICATION_ERROR_MESSAGE, "UTF-8") +
-                              "&status=" + URLEncoder.encode(FIDOAuthenticatorConstants.AUTHENTICATION_STATUS, "UTF-8");
+                String redirectURL = loginPage.replace("authentication.jsp", "retry.do");
+                redirectURL = response.encodeRedirectURL(redirectURL + ("?")) + "&failedUsername=" + URLEncoder.encode(user.getUserName(), IdentityCoreConstants.UTF_8) +
+                        "&statusMsg=" + URLEncoder.encode(FIDOAuthenticatorConstants.AUTHENTICATION_ERROR_MESSAGE, IdentityCoreConstants.UTF_8) +
+                        "&status=" + URLEncoder.encode(FIDOAuthenticatorConstants.AUTHENTICATION_STATUS, IdentityCoreConstants.UTF_8);
                 response.sendRedirect(redirectURL);
             }
 
@@ -158,11 +158,11 @@ public class FIDOAuthenticator extends AbstractApplicationAuthenticator
         AuthenticatedUser authenticatedUser = null;
         for (int i = 1; i <= context.getSequenceConfig().getStepMap().size(); i++) {
             if (context.getSequenceConfig().getStepMap().get(i).getAuthenticatedUser() != null &&
-                context.getSequenceConfig().getStepMap().get(i).getAuthenticatedAutenticator()
-                        .getApplicationAuthenticator() instanceof LocalApplicationAuthenticator) {
+                    context.getSequenceConfig().getStepMap().get(i).getAuthenticatedAutenticator()
+                            .getApplicationAuthenticator() instanceof LocalApplicationAuthenticator) {
                 authenticatedUser = context.getSequenceConfig().getStepMap().get(i).getAuthenticatedUser();
                 if (authenticatedUser.getUserStoreDomain() == null) {
-                    authenticatedUser.setUserStoreDomain(FIDOAuthenticatorConstants.PRIMARY_USER_DOMAIN);
+                    authenticatedUser.setUserStoreDomain(UserCoreConstants.PRIMARY_DEFAULT_DOMAIN_NAME);
                 }
 
 
